--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/fl_activity_camera_container"
+    <com.otaliastudios.cameraview.CameraView
+        android:id="@+id/fl_activity_camera_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/color_000000"
+        android:keepScreenOn="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:background="@color/color_9b9b9b" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/ibt_activity_camera_close"
@@ -28,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/ibt_activity_camera_picture_send"
+        android:id="@+id/ibt_activity_camera_capture_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -55,7 +55,7 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <FrameLayout
-        android:id="@+id/fl_activity_camera_picture_container"
+        android:id="@+id/fl_activity_camera_capture_container"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="25dp"
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toTopOf="@id/bt_activity_camera_record">
 
         <ImageView
-            android:id="@+id/iv_activity_camera_picture"
+            android:id="@+id/iv_activity_camera_latest_capture"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerInside" />
