--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,18 +20,19 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_activity_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-
-    </android.support.constraint.ConstraintLayout>
+        android:layout_height="150dp"
+        android:clipToPadding="false"
+        android:padding="10dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_activity_main_show_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:id="@+id/fab_activity_main_show_camera"
         android:layout_margin="10dp"
         android:src="@drawable/ic_camera_white"
         app:fabSize="normal" />
